sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/Fleet_Work_Ticket__c.object-meta.xml
<CustomObject>
    <label>Fleet Work Ticket</label>
    <nameField>
        <label>Fleet Work Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Work Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>