sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Closing_Millage__c.field-meta.xml
<CustomField>
    <fullName>Closing_Millage__c</fullName>
    <label>Closing Millage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>