sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>16</length>
    <type>Text</type>
</CustomField>