sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <length>16</length>
    <type>Text</type>
</CustomField>