sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Distance_Covered__c.field-meta.xml
<CustomField>
    <fullName>Distance_Covered__c</fullName>
    <formula>Closing_Millage__c -  Opening_Millage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Covered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>