sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver Name</label>
    <referenceTo>Employee_Drivers__c</referenceTo>
    <relationshipLabel>Fleet Work Tickets</relationshipLabel>
    <relationshipName>Fleet_Work_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>