sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Duty__c.field-meta.xml
<CustomField>
    <fullName>Duty__c</fullName>
    <label>Duty</label>
    <length>16</length>
    <type>Text</type>
</CustomField>