sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <label>Start</label>
    <length>16</length>
    <type>Text</type>
</CustomField>