sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/fields/Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Registration</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Fleet Work Tickets</relationshipLabel>
    <relationshipName>Fleet_Work_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>