sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/recordTypes/Fleet_Work_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Work_Ticket</fullName>
    <active>true</active>
    <label>Fleet Work Ticket</label>
</RecordType>