sfSandBoxCode/force-app/main/default/objects/Fleet_Work_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Driver_Name__c</columns>
    <columns>Opening_Millage__c</columns>
    <columns>Closing_Millage__c</columns>
    <columns>Vehicle_Registration__c</columns>
    <columns>Comments__c</columns>
    <columns>Time_In__c</columns>
    <columns>Time_Out__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>